--- a/HardCoding/Info.plist
+++ b/HardCoding/Info.plist
@@ -41,5 +41,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSVideoSubscriberAccountUsageDescription</key>
+	<string>123</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>234</string>
+	<key>NSCameraUsageDescription</key>
+	<string>456</string>
 </dict>
 </plist>
